--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -310,10 +310,10 @@ select,
 }
 
 /* دکمه توخالی */
-.btn-outline-secondary {
+/* .btn-outline-secondary {
   background-color: transparent;
   color: #FF5857;
-}
+} */
 
 .btn-outline-secondary:hover {
   background-color: #FF5857;
