--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -66,11 +66,11 @@ body {
 
 /*RTL*/
 
-body {
+/* body {
   direction: rtl;
   text-align: right;
   font-family: Yekan Bakh, Arial, sans-serif;
-}
+} */
 
 
 
